css/style.css
/* ... */
.text_uder_tooth {
    padding-top: 41px;
    text-align: center;
}




/* Google Map */

.map_part {
    padding-top: 50px;
    min-height: 500px;
    font-family: "Poiret One", sans-serif;
    font-weight: bold;
}

.google_map {
    width: 100%;
    height: 380px;
}

.bluredblocks_block {
    position: relative;
    bottom: 60px;
    z-index: 10;
    /* width: 272; */
    min-height: 200px;
    display: flex;
    justify-content: space-between;
    flex-direction: row;
    align-items: center;
}

.blured_block {
    width: 272px;
    height: 198px;
    transition: all 0.2s;
    position: relative;
    cursor: pointer;
}

.bluredblock_inner {
    padding: 20px 23px;
    padding-right: 55px;
    width: inherit;
    height: inherit;
    background: rgba(255, 255, 255, .05);
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
    backdrop-filter: blur(10px);
    border: 1px solid #e0e0e0;
}

@media screen and (max-width: 890px) {
    .bluredblocks_block {
        justify-content: center;
    }

    .bl_block {
        margin: 10px 20px;
    }

    .google_map {
        height: 250px;
    }

    .fr_block_none {
        display: none;
    }
    .bluredblock_inner {
        border-radius: 23px;
        background: rgba(239, 239, 239, 0.78);
        box-shadow: none;
        border: none;
    }
}
.third_section_extern {
    font-family: "Poiret One", sans-serif;
    font-weight: bold;
}
.aboutplace_title {
    font-size: 18px;
    font-weight: 600;
    text-decoration: underline;
    margin-top: 10px;
}

.aboutplace_text {
    font-size: medium;
    margin-top: 25px;
    color: #000;
}

@media screen and (max-width: 700px) {
    .blured_block {
        width: 213px;
        height: 193px;
    }

    .bluredblocks_block {
        bottom: 30px;
    }
}

@media screen and (max-width: 500px) {
    .bluredblocks_block {
        flex-direction: column;
        bottom: -20px;
    }

    .blured_block {
        width: 100%;
        height: 165px;
    }

    .underslider_texts {
        padding-top: 40px;
    }

    .largest_text_home {
        font-size: 15px;
    }

    .maintitle {
        font-size: 18px;
    }

    .inner_about {
        padding: 38px 22px;
    }

    .third_section_extern {
        padding-top: 40px;
    }
}


@media only screen and (max-width: 480px) {
    main {
        font-family: "Poiret One", sans-serif;
        font-weight: normal;
    }

}

/* Team Section */

.team_section {
    background: #ebebeb;
}

.team_dentists_part {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    min-height: 310px;
    padding-top: 110px;
}

.dentist_block {
    width: 280px;
    min-height: 310px;
    /* border: 1px solid #818181; */
}

.inner_dentist_block {
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 100%;
    width: 100%;
    padding: 0px 15px;
}

.round_insteadofphoto_block {
    height: 210px;
    width: 210px;
    border-radius: 50%;
    background: #9E9E9E;
}

.info_about_dentist {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    font-family: 'Montserrat', 'sans-serif';
}

.dentist_name {
    color: #000000;
    font-weight: 500;
    padding-top: 23px;
}

.dentist_roles {
    line-height: 20px;
    padding-top: 15px;
}

.text_belowteam_block {
    display: flex;
    justify-content: center;
    padding-top: 60px;
    width: 100%;
    text-align: center;
}

.text_below_team {
    font-family: "Poiret One", sans-serif;
    font-weight: 900;
    font-style: normal;
    padding-bottom: 100px;
    width: 85%;
}


@media screen and (max-width: 760px) {
    .team_dentists_part {
        display: grid;
        align-items: center;
        justify-content: space-between;
        gap: 20px;
        grid-template-columns: repeat(2, 1fr);
        grid-template-rows: auto auto;
    }

    .dentist_block {
        width: 100%;
    }

    .dentist_block:nth-child(3) {
        grid-column: 1 / -1;
    }
}

@media screen and (max-width: 520px) {
    .team_dentists_part {
        grid-template-columns: 1fr;
    }
}



/* Calling Button on the small devices */

.smalldvc_call_btn {
    display: none;
}

@media screen and (max-width: 680px) {
    .smalldvc_call_btn {
        display: flex;
        align-items: center;
        justify-content: center;
        right: 0;
        z-index: var(--z-fixed);
        bottom: 0;
        position: fixed;
        border: 1px solid #8e8e8e;
        border-radius: 50%;
        height: 50px;
        width: 50px;
        cursor: pointer;
        margin-bottom: 30px;
        margin-right: 25px;
        backdrop-filter: blur(10px);
        background-color: #fdf4ff;
    }

    .onsmallcall_img {
        width: 20px;
    }
}




/* Why to choose */
.whytochoose_section {
    background: #fcf8f8;
}
.whytochoose_part {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.whytochoose_title {
    font-family: "Poiret One", sans-serif;
    font-weight: 500;
    font-style: normal;
    font-size: 20px;
    text-decoration: underline 1px;
    padding-bottom: 23px;
}

.whytochoose_reason {
    line-height: 22px;
    padding: 14px 20px;
}

.whytochoose_reason:last-child {
        padding-bottom: 30px;
}
@media screen and (max-width: 500px){
    .whytochoose_reason {
        padding: 3px 0px;
    }
}

/* FOOTER SECTION */

.footer_section {
    min-height: 460px;
    background-color: #373737;
}
.tel_numb_btn_footer {
    font-family: "Outfit", sans-serif;
    font-optical-sizing: auto;
    font-weight: 300;
    font-style: normal;
    border: 1px solid rgb(234, 234, 234);
    display: flex;
    width: 218px;
    align-items: center;
    justify-content: center;
    height: 34px;
    border-radius: 6px;
    font-size: 29px;
}
.telzanom_text_footer {
    color: white;
    font-size: 18px;
    padding-bottom: 16px;
}
.tel_numb_zanom_footer {
    color: white;
    font-size: 19px;
}
/* ... */

